// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header cannot be implemented 1`] = `
"snippetCode.ts (4,13): Class 'MyHeader' incorrectly implements interface 'Header'.
  Type 'MyHeader' is missing the following properties from type 'Header': hash, version, previousHash, index, and 4 more.

      2 |       import { Header } from '@neo-one/smart-contract';
      3 | 
    > 4 |       class MyHeader implements Header {
        |             ^
      5 |       }
      6 |     
"
`;

exports[`Header invalid "reference" 1`] = `
"snippetCode.ts (4,26): Builtin properties cannot be referenced

      2 |       import { Header } from '@neo-one/smart-contract';
      3 | 
    > 4 |       const for = Header['for'];
        |                          ^
      5 |     
"
`;

exports[`Header invalid reference - object 1`] = `
"snippetCode.ts (4,15): Builtin properties cannot be referenced

      2 |       import { Header } from '@neo-one/smart-contract';
      3 | 
    > 4 |       const { for } = Header;
        |               ^
      5 |     
"
`;

exports[`Header invalid reference 1`] = `
"snippetCode.ts (4,26): Builtin properties cannot be referenced

      2 |       import { Header } from '@neo-one/smart-contract';
      3 | 
    > 4 |       const for = Header.for;
        |                          ^
      5 |     
"
`;
